--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dnr-os",
-  "version": "0.1.0",
+  "name": "os.dnnr.dev",
+  "version": "1.0.13",
   "private": true,
   "scripts": {
     "dev": "next dev",
